--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,4 +1,4 @@
-label {
+.feedback-form {
     display: flex;
     flex-direction: column;
    margin: 0;
@@ -8,17 +8,36 @@ label {
   line-height: 1.5; 
   letter-spacing: 0.04em;
   }
-  input {
+
+  .form-label {
+    display: flex;
+    flex-direction: column;
+    color: #2E2F42;
+font-family: Montserrat;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.04em;
+  }
+
+  .input:hover, 
+  .input:focus {
+    border: 1px solid #000;
+  }
+
+  .input {
     margin-top: 8px;
     padding: 8px 16px;
     width: 360px;
     height: 40px;
     border-radius: 8px;
     border: 1px solid #808080;
-  
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  textarea {
+
+
+  .textarea {
     margin-top: 8px;
     padding: 8px 16px;
     width: 360px;
@@ -26,9 +45,16 @@ label {
     border-radius: 8px;
     border: 1px solid #808080;
   margin-bottom: 16px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
+.textarea:hover, 
+.textarea:focus {
+  border: 1px solid #000;
+}
     
-  button {
+  .btn {
+    width: 95px;
     cursor: pointer;
     padding: 8px 16px;
     border: none;
@@ -42,8 +68,8 @@ label {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
-  button:hover,
-  button:focus {
+  .btn:hover,
+  .btn:focus {
     background-color: #6C8CFF;
   }
   
